--- a/static/chromeapp/index.html
+++ b/static/chromeapp/index.html
@@ -14,8 +14,9 @@
             <b><p id="result"></p></b>
             <script type="text/javascript" src="{% static 'chromeapp/index.js' %}"></script>
             <div>
-                <input type="email">Email</input>
-                <input type="password">Password</input>
+                <input id="email" type="email">Email</input>
+                <input id="password" type="password">Password</input>
+                <h1>Login Status:<p id="status"></p></h1>
             </div>
         </body>
     </html>
